--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/szechuan-chicken.html">Szechuan Chicken</a>
-        <br>
-        <a href="./recipes/pancakes.html">Pancakes Recipe</a>
-        <br>
-        <a href="./recipes/curry.html">Curry Recipe</a>
+        <ul>
+            <li><a href="./recipes/szechuan-chicken.html">Szechuan Chicken</a>   </li>
+            <li><a href="./recipes/pancakes.html">Pancakes Recipe</a>  </li>
+            <li><a href="./recipes/curry.html">Curry Recipe</a></li>           
+        </ul>       
     </body>
 </html>
